2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Forms_FIN_HR_IT_QA__c/fields/Customer_Service_HR__c.field-meta.xml
<CustomField>
    <fullName>Customer_Service_HR__c</fullName>
    <description>-Ability to interface with colleagues from ALL departments 
-Respond in a timely manner (via phone, email, calls)
-Manage management and colleagues&apos; expectation
-Act as the liaison between management and employees to ensure smooth communication and prompt resolution of all queries</description>
    <inlineHelpText>-Ability to interface with colleagues from ALL departments 
-Respond in a timely manner (via phone, email, calls)
-Manage management and colleague&apos;s expectations
-Act as the liaison between management and employees to ensure smooth communication and prompt resolution of all queries</inlineHelpText>
    <label>Customer Service [HR]</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <default>true</default>
                <label>1</label>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>