2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Forms_FIN_HR_IT_QA__c/fields/Data_Management_FIN__c.field-meta.xml
<CustomField>
    <fullName>Data_Management_FIN__c</fullName>
    <description>-Ensure all data is correct &amp; updated in an accurate, prompt, and efficient manner
-Admin support for the upkeep of files and schedules, system backup and data dump
-System maintenance and update/review on usage requirement
-Personal data protection act</description>
    <inlineHelpText>-Ensure all data is correct &amp; updated in an accurate, prompt and efficient manner
-Admin support for the upkeep of files and schedules, system back-up and data dump
-System maintenance and update/review on usage requirement
-Personal data protection act</inlineHelpText>
    <label>Data Management [FIN]</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <default>true</default>
                <label>1</label>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>