2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Forms_FIN_HR_IT_QA__c/fields/Data_Management_HR__c.field-meta.xml
<CustomField>
    <fullName>Data_Management_HR__c</fullName>
    <description>-Ensure all data is correct &amp; updated in an accurate, prompt, and efficient manner
-Deliver great employee experiences through effectively administrating employee processes and records in Salesforce / HR system</description>
    <inlineHelpText>-Ensure all data is correct &amp; updated in an accurate, prompt, and efficient manner
-Deliver great employee experiences through effectively administrating employee processes and records in Salesforce/HR system</inlineHelpText>
    <label>Data Management [HR]</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <default>true</default>
                <label>1</label>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>