2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Forms_FIN_HR_IT_QA__c/fields/Difficult_Situation_Mgmt_HR__c.field-meta.xml
<CustomField>
    <fullName>Difficult_Situation_Mgmt_HR__c</fullName>
    <description>Grievances, Complaint and Discipline Management: 
-Ensure all employees grievances and concern are dealt with in a consistent process and resolved promptly and with fairness.
-Bridge employee relations e.g. feedback portal, whistleblowing etc
-Dispute management 
-Handle staff disciplinary situations</description>
    <inlineHelpText>Grievances, Complaint and Discipline Management: 
-Ensure all employees grievances and concern are dealt with in a consistent process and resolved promptly and with fairness.
-Bridge employee relations e.g. feedback portal, whistleblowing etc
-Dispute management 
-Handle staff disciplinary situations</inlineHelpText>
    <label>Difficult Situation Mgmt [HR]</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <default>true</default>
                <label>1</label>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>