2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Forms_FIN_HR_IT_QA__c/fields/Division_Department__c.field-meta.xml
<CustomField>
    <fullName>Division_Department__c</fullName>
    <formula>Contact__r.Department</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Division/Department</label>
    <type>Text</type>
</CustomField>