2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Forms_FIN_HR_IT_QA__c/fields/Effective_Communication_skills__c.field-meta.xml
<CustomField>
    <fullName>Effective_Communication_skills__c</fullName>
    <description>Grading for Effective Communication skills.</description>
    <inlineHelpText>Effective communication soft skills are the tools one uses to clearly and effectively converse with others, set expectations, and collaborate on projects. Communication skills are more than speaking or emailing. This umbrella set of interpersonal skills includes everything from collaboration to active listening.</inlineHelpText>
    <label>Effective Communication skills</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <default>true</default>
                <label>1</label>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>