2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Forms_FIN_HR_IT_QA__c/fields/Effective_Team_Player__c.field-meta.xml
<CustomField>
    <fullName>Effective_Team_Player__c</fullName>
    <description>Grading for Effective Team Player.</description>
    <inlineHelpText>A team player will always prioritize the goals of their team over individual interests. This soft skill allows one to work as a team during conversations, professional collaborations and meetings. The ability to align everyone&apos;s goals and responsibilities - requires effective communication.</inlineHelpText>
    <label>Effective Team Player</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <default>true</default>
                <label>1</label>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>