2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Forms_FIN_HR_IT_QA__c/fields/Facilities_Management__c.field-meta.xml
<CustomField>
    <fullName>Facilities_Management__c</fullName>
    <description>-Work with Warehouse team and vendors to facilitate the installation, maintenance and upkeep of the cctv/temperature/humidity (“the facilities”) control in the warehouse.
-Monitor the facilities through reports and troubleshoot/diagnose faulty units with the Warehouse team
-Constant update of Facilities floorplan to ensure it is up to date</description>
    <inlineHelpText>-Work with the Warehouse team and vendors to facilitate the installation, maintenance and upkeep of the CCTV &amp; temperature/humidity control in the warehouse. 
-Monitor the facilities through reports and troubleshoot/diagnose faulty units with the Warehouse team 
-Constant update of Facilities floorplan to ensure it is up to date</inlineHelpText>
    <label>Facilities Management</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <default>true</default>
                <label>1</label>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>