2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Forms_FIN_HR_IT_QA__c/fields/Financial_Management__c.field-meta.xml
<CustomField>
    <fullName>Financial_Management__c</fullName>
    <description>-Financial reporting: Prepare financial reports for management &amp; authorities&apos; submission in a timely manner
-Financial governance: track financial transactions, manage performance &amp; control data, compliance, operations, &amp; disclosures.
-Ensure all revenue &amp; cost have been properly taken up in the correct accounting period with error below 5%
-Sales report
-Resolve issues in accounts &amp; reconciliation on General Ledger
-Ad-hoc reports
-Consistency: for classification of information in the report</description>
    <inlineHelpText>-Financial reporting: Prepare financial reports for management &amp; authorities&apos; submission in a timely manner
-Financial governance: track financial transactions, manage performance &amp; control data, compliance, operations, &amp; disclosures.
-Ensure all revenue &amp; cost have been properly taken up in the correct accounting period with error below 5%
-Sales report
-Resolve issues in accounts &amp; reconciliation on General Ledger
-Ad-hoc reports
-Consistency: for classification of information in the report</inlineHelpText>
    <label>Financial Management</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <default>true</default>
                <label>1</label>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>