2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Forms_FIN_HR_IT_QA__c/fields/General_Ledger__c.field-meta.xml
<CustomField>
    <fullName>General_Ledger__c</fullName>
    <description>-Knowledge of book closure &amp; applicable accounting treatment
-Stock mgmt: physical stock count, audit, identify slow moving/obsolete/missing/unidentified stock
-Inter-co &amp; related parties reconciliation &amp; disclosure
-Fixed assets physical sighting, depreciation, disposal/written off, proceeds
-Consolidation for Group reporting
-Management reporting
-Technical update on the latest compliance</description>
    <inlineHelpText>-Knowledge of book closure &amp; applicable accounting treatment
-Stock mgmt: physical stock count, audit, identify slow-moving/obsolete/missing/unidentified stock
-Inter-co &amp; related parties reconciliation &amp; disclosure
-Fixed assets physical sighting, depreciation, disposal/written off, proceeds
-Consolidation for Group reporting
-Management reporting
-Technical update on the latest compliance</inlineHelpText>
    <label>General Ledger</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <default>true</default>
                <label>1</label>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>