2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Forms_FIN_HR_IT_QA__c/fields/HR_Management__c.field-meta.xml
<CustomField>
    <fullName>HR_Management__c</fullName>
    <description>-Responsible for end-to-end employee cycle which includes all activities for recruitment, onboarding, payroll, training, performance &amp; compensation management, grievance management, discipline, and separation management.</description>
    <inlineHelpText>-Responsible for end-to-end employee cycle which includes all activities for recruitment, onboarding, payroll, training, performance &amp; compensation management, grievance management, discipline, and separation management.</inlineHelpText>
    <label>HR Management</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <default>true</default>
                <label>1</label>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>