2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Forms_FIN_HR_IT_QA__c/fields/HR_Management_HR__c.field-meta.xml
<CustomField>
    <fullName>HR_Management_HR__c</fullName>
    <description>-Update employee personal file and career progression
-Staff retention policies &amp; analysis
-Assist to initiate succession planning</description>
    <inlineHelpText>-Update employee personal file and career progression
-Staff retention policies &amp; analysis
-Assist to initiate succession planning</inlineHelpText>
    <label>HR Management [HR]</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <default>true</default>
                <label>1</label>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>