2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Forms_FIN_HR_IT_QA__c/fields/Hybrid_Worksite_HTGroup__c.field-meta.xml
<CustomField>
    <fullName>Hybrid_Worksite_HTGroup__c</fullName>
    <description>-Conduct internal quality audits on a regular basis on all other Helutrans offices (hybrid mode)
-Support and implement remote sites/other countries including hybrid work</description>
    <inlineHelpText>-Conduct internal quality audits on a regular basis on all other Helutrans offices (hybrid mode)
-Support and implement remote sites/other countries including hybrid work</inlineHelpText>
    <label>Hybrid Worksite (HTGroup)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <default>true</default>
                <label>1</label>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>