2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Forms_FIN_HR_IT_QA__c/fields/ID_No__c.field-meta.xml
<CustomField>
    <fullName>ID_No__c</fullName>
    <formula>Contact__r.ID_No_HT__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ID No</label>
    <type>Text</type>
</CustomField>