2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Forms_FIN_HR_IT_QA__c/fields/Industry_best_practices_FIN__c.field-meta.xml
<CustomField>
    <fullName>Industry_best_practices_FIN__c</fullName>
    <description>-Time Management: Ability to multi-task &amp; be able to handle multiple assignments. Focusing on being organised &amp; attention to details in a timely manner.   

-Process Improvement: Constant review of process workflow and internal check &amp; control. Able to propose creative and innovative ideas to streamline the way tasks/jobs are executed. 

-Consistency: for classification of information in the report 
-Cost management: Improve cost control
-Error &amp; Fraud detection</description>
    <inlineHelpText>-Time Management: Ability to multi-task &amp; be able to handle multiple assignments. Focusing on being organized &amp; attention to detail in a timely manner.   

-Process Improvement: Constant review of process workflow and internal check &amp; control. Able to propose creative and innovative ideas to streamline the way tasks/jobs are executed. 

-Consistency: for classification of information in the report 
-Cost management: Improve cost control
-Error &amp; Fraud detection</inlineHelpText>
    <label>Industry Best Practices (FIN)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <default>true</default>
                <label>1</label>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>