2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Forms_FIN_HR_IT_QA__c/fields/Industry_Best_Practices_HR__c.field-meta.xml
<CustomField>
    <fullName>Industry_Best_Practices_HR__c</fullName>
    <description>-Develop long term sustainability via HR-related SOP, software to monitor/control, renewal of Group H&amp;S insurance, workmen compensation, etc. 
-Support current and future business needs through the development, engagement, motivation and preservation of human capital (Eg staff training, skills upgrade, career progression, and welfare)
-Perform the full lifecycle recruitment process, when required, and ensure that this is carried out in accordance with operating procedures and adhere to best practice principles.
-Analyze Industry trends 
-Schedule and conduct meetings with departments to proactively identify topics to be addressed or areas in need of additional instruction</description>
    <inlineHelpText>-Develop long term sustainability via HR-related SOP, software to monitor/control, renewal of Group H&amp;S insurance, workmen compensation, etc. 
-Support current and future business needs through the development, engagement, motivation and preservation of human capital (Eg staff training, skills upgrade, career progression, and welfare)
-Perform the full lifecycle recruitment process, when required, and ensure that this is carried out in accordance with operating procedures and adhere to best practice</inlineHelpText>
    <label>Industry Best Practices [HR]</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <default>true</default>
                <label>1</label>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>