2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Forms_FIN_HR_IT_QA__c/fields/IS_Compliance__c.field-meta.xml
<CustomField>
    <fullName>IS_Compliance__c</fullName>
    <description>Appointed role of Data Protection Officer
Knowledge of Personal Data Protection Act (PDPA) regulation: 
-Appointed role of Data Protection Officer
-Ability to develop and implement good policies and practices for handling personal data that meet our organisation&apos;s needs. 
-Ability to communicate the policies and practices clearly to employees and customers.	
-Ability to communicate the policies and practices clearly to employees and customers.</description>
    <inlineHelpText>Knowledge of Personal Data Protection Act (PDPA) regulation: 
-Appointed role of Data Protection Officer
-Ability to develop and implement good policies and practices for handling personal data that meet our organisation&apos;s needs. 
-Ability to communicate the policies and practices clearly to employees and customers.</inlineHelpText>
    <label>IS Compliance</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <default>true</default>
                <label>1</label>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>