2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Forms_FIN_HR_IT_QA__c/fields/IT_Continuous_Learning_Update__c.field-meta.xml
<CustomField>
    <fullName>IT_Continuous_Learning_Update__c</fullName>
    <description>-Provide account administration and user support including Active Directory, Email Exchange, File / Printer Servers, TrendMicro Anti-Virus Management Console, Wi-Fi, Telephony, Door Access Systems and etc.
-Support systems activities on installation of servers, storage and server room facilities.
-Support end-users Computing on Windows Operating Systems and MS Office Suite.
-Ensure operating environment are secured and security patches are up-to-date.
-Maximise computer system capabilities, and ensure constant updating, &amp; improvement of existing programs by evaluating objectives and specifications, reviewing proposed changes, and making recommendations.  
-Test and evaluate new and latest software applications and update users on a routine basis</description>
    <inlineHelpText>-Account administration and users support including Active Directory, Emails, File/Printer Servers, Anti-Virus Management, Wi-Fi, Telephony, Door Access Systems and MS Office etc.
-Support systems activities on installation of servers, storage and server room facilities.
-Ensure operating environment are secured &amp; security patches are up-to-date.
-Maximise computer system capabilities &amp; ensure constant updating &amp; improvement of programs, review &amp; propose changes
-Test &amp; evaluate new/latest software</inlineHelpText>
    <label>IT Continuous Learning Update</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <default>true</default>
                <label>1</label>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>